# mlmd-noise

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
comms/: README.md
data-processing/: README.md  benchmark_mapping.py  csv_extract_potential_test.py  csv_mapping.py  diagnose_mismatches.py  (+10 more)
lilaw-poc/: .gitignore  DECISIONS.md  Makefile  PLAN-OVERVIEW.md  PLAN-TASK-01.md  PLAN-TASK-02.md  PLAN-TASK-03.md  PLAN-TASK-04.md  PLAN-TASK-05.md  PLAN-TASK-06.md  PLAN-TASK-07.md  PLAN-TASK-08.md  PLAN-TASK-09.md  PLAN-TASK-10.md  PLAN.md  README.md  gpu-resources-and-recommendations.md  pyproject.toml  setup.sh
lilaw-poc/docs/: AGGRESSIVE_FOLLOWUP_PLAN.md  DECISIONS.md  PHASE1_TROUBLESHOOTING.md  design.md  experiments.md  theory.md
lilaw-poc/jobs/: cpu_phase1.txt  gpu_phase1.txt
lilaw-poc/results/medmnist/: results.json
lilaw-poc/scripts/: build_priority_jobs.py  dispatch_queue.sh  fetch_medmnist_results.sh  monitor_dispatch.sh  run_medmnist_matrix.py  run_medmnist_sweep.sh  run_medmnist_sweep_v2.sh  run_sweep_runpod.sh  run_tabular_matrix.py  setup_env.sh  summarize_results.py  test_fire_and_forget.sh
lilaw-poc/src/lilaw_poc/: evaluate.py  experiment.py  lilaw.py  model.py  train.py
lilaw-poc/src/lilaw_poc/data/: datasets.py  noise.py
lilaw-poc/src/lilaw_poc/medmnist/: README.md  continue.txt  datasets.py  evaluate.py  experiment.py  model.py  noise.py  train.py
lilaw-poc/tests/: test_build_priority_jobs.py  test_datasets.py  test_e2e.py  test_evaluate.py  test_lilaw.py  test_medmnist.py  test_model.py  test_noise.py  test_train.py
(+125 files in other folders)
